--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/irynakoval03/irynakoval03.github.io#readme",
   "devDependencies": {
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "hint": "^6.1.12"
+    "hint": "^6.1.12",
+    "prettier": "2.6.2"
   }
 }
