--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:prettier/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -19,13 +20,28 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "prettier"
     ],
     "rules": {
         "indent": [
             "error",
             4
         ],
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "prettier/prettier": [
+            "error",
+            {
+                "printWidht": 80,
+                "trailingComma": "es5",
+                "semi": true,
+                "jsxSingleQuote": true,
+                "singleQuote": true,
+                "useTabs": true,
+                "endOfLine": "auto",
+                "tabWidth": 3
+            }
+        ]
+
     }
 }
